Added pagination and queries for teachers
